# tinysteps

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/tinysteps/: __init__.py  cli.py  models.py  report.py
src/tinysteps/analyzer/: __init__.py  concerns.py  percentile.py  recommendations.py
src/tinysteps/milestones/: __init__.py  assessor.py  database.py  tracker.py
tests/: test_analyzer.py  test_assessor.py  test_benchmark.py  test_core.py  test_database.py  test_integration.py  test_models.py  test_tracker.py
