[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tinysteps"
version = "0.1.0"
description = "Baby Milestone Tracker based on CDC/WHO developmental guidelines"
authors = [
    {name = "Mukunda Katta"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
tinysteps = "tinysteps.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
